--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -126,3 +126,4 @@ information2_48 BITMAP "..\\bmp\\information2_48.bmp"
 user_mobilephone_48 BITMAP "..\\bmp\\user_mobilephone_48.bmp"
 form_blue_48 BITMAP "..\\bmp\\form_blue_48.bmp"
 user_48 BITMAP "..\\bmp\\user_48.bmp"
+shopping_bag_48 BITMAP "..\\bmp\\shopping_bag_48.bmp"
