--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11970,7 +11970,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 352, 257, 50, 14
 }
 
-LALBPRV_1 DIALOG DISCARDABLE 135, 103, 399, 238
+LALBPRV_1 DIALOG DISCARDABLE 135, 103, 905, 238
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
@@ -11978,7 +11978,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 132, 2, 264, 12
   CONTROL "", 121, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 132, 2, 264, 47
   CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 64, 14, 65, 11
-  CONTROL "", 113, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 64, 26, 65, 11
+  CONTROL "", 113, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 3, 26, 65, 11
   CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 64, 38, 65, 11
   CONTROL "", 222, "Edit", WS_BORDER, 132, 38, 264, 11
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 64, 50, 65, 11
@@ -12509,16 +12509,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "Impuestos", -1, "Static", WS_GROUP, 8, 50, 37, 8
 }
 
-LFACCLI DIALOG DISCARDABLE 9, -33, 431, 286
+LFACCLI DIALOG DISCARDABLE 9, -33, 430, 325
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Lineas de Factura"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 364, 248
-  CONTROL "&Series [F6]", 552, "Button", WS_TABSTOP, 3, 253, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 207, 253, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 262, 253, 50, 14
-  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 317, 253, 50, 14
+  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 365, 289
+  CONTROL "&Series [F6]", 552, "Button", WS_TABSTOP, 3, 295, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 207, 295, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 262, 295, 50, 14
+  CONTROL "A&yuda", 9, "Button", WS_TABSTOP, 317, 295, 50, 14
   CONTROL "TBitmap", 220, "TBitmap", 0x00000000, 369, 14, 59, 47
 }
 
@@ -19994,89 +19994,90 @@ FONT 8, "MS Sans Serif"
   CONTROL "Ubicación", -1, "Static", WS_GROUP, 5, 68, 73, 8
 }
 
-LSATCLI_1 DIALOG DISCARDABLE 150, 93, 359, 232
+LSATCLI_1 DIALOG DISCARDABLE 150, 93, 717, 271
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 2, 65, 11
-  CONTROL "", 111, "Edit", NOT WS_VISIBLE|ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 64
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 25
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 3, 65, 11
+  CONTROL "", 111, "Edit", NOT WS_VISIBLE|ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 3, 234, 63
+  CONTROL "", 500, "TXBrowse", NOT WS_VISIBLE|WS_TABSTOP|0x00300000, 4, 16, 353, 90
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 123, 3, 234, 11
   CONTROL "", 112, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 16, 65, 11
   CONTROL "", 340, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 29, 65, 11
   CONTROL "", 270, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 42, 65, 11
-  CONTROL "", 272, "Edit", NOT WS_VISIBLE|WS_BORDER, 122, 42, 234, 11
+  CONTROL "", 272, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 42, 234, 11
   CONTROL "", 280, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 55, 65, 11
-  CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 122, 55, 234, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 81, 65, 11
-  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 95, 65, 11
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 108, 65, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 121, 65, 11
-  CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 134, 65, 11
-  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 147, 65, 11
-  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 160, 65, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 173, 65, 11
-  CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 186, 65, 11
-  CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 199, 65, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 81, 70, 11
-  CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 218, 65, 11
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 68, 70, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 95, 70, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 301, 95, 54, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 70, 11
-  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 301, 108, 54, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 121, 70, 11
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 249, 121, 108, 11
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 178, 134, 70, 11
-  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 249, 134, 108, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 178, 147, 70, 11
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 249, 147, 108, 11
-  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 160, 70, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 173, 51, 11
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 230, 173, 18, 11
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 173, 50, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 338, 173, 19, 11
-  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 178, 186, 179, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 178, 199, 70, 11
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 178, 218, 70, 11
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 249, 199, 108, 11
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 217, 70, 11
-  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 250, 69, 63, 10
-  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 173, 23, 11
-  CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 176, 25, 8
-  CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 111, 48, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 4, 221, 34, 8
-  CONTROL "Descuento ", -1, "Static", WS_GROUP, 123, 98, 42, 8
-  CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 124, 43, 8
-  CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 5, 36, 8
-  CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 84, 36, 8
-  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 250, 98, 49, 8
-  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 111, 47, 8
-  CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 202, 47, 8
+  CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 55, 234, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 121, 65, 11
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 135, 65, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 148, 65, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 161, 65, 11
+  CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 174, 65, 11
+  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 187, 65, 11
+  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 200, 65, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 213, 65, 11
+  CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 226, 65, 11
+  CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 239, 65, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 121, 70, 11
+  CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 258, 65, 11
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 70, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 135, 70, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 303, 135, 54, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 148, 70, 11
+  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 303, 148, 54, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 161, 70, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 249, 161, 108, 11
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 178, 174, 70, 11
+  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 249, 174, 108, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 178, 187, 70, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 249, 187, 108, 11
+  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 200, 70, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 213, 51, 11
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 230, 213, 18, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 213, 50, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 338, 213, 19, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 178, 226, 179, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 178, 239, 70, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 178, 258, 70, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 249, 239, 108, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 257, 70, 11
+  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 250, 109, 63, 10
+  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 213, 23, 11
+  CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 216, 25, 8
+  CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 151, 48, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 4, 261, 34, 8
+  CONTROL "Descuento ", -1, "Static", WS_GROUP, 123, 138, 42, 8
+  CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 164, 43, 8
+  CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 6, 36, 8
+  CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 124, 36, 8
+  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 250, 138, 49, 8
+  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 151, 47, 8
+  CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 242, 47, 8
   CONTROL "Propiedad 2", 281, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 57, 51, 8
   CONTROL "Propiedad 1", 271, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 44, 51, 8
-  CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 123, 84, 37, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 176, 19, 8
-  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 150, 37, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 123, 202, 45, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 214, 354, 11
-  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 123, 71, 34, 8
-  CONTROL "Costo", 321, "Static", WS_GROUP, 123, 221, 23, 8
-  CONTROL "Nº lote", 113, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 18, 50, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 137, 45, 8
-  CONTROL "Portes", 351, "Static", WS_GROUP, 4, 189, 42, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 250, 176, 31, 8
-  CONTROL "", 521, "Static", WS_GROUP, 4, 137, 42, 8
-  CONTROL "", 541, "Static", WS_GROUP, 4, 163, 47, 8
-  CONTROL "", 531, "Static", WS_GROUP, 4, 150, 42, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 124, 47, 8
-  CONTROL "Comisión ", -1, "Static", WS_GROUP, 250, 111, 35, 8
+  CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 123, 124, 37, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 216, 19, 8
+  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 190, 37, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 123, 242, 45, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 254, 354, 1
+  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 123, 111, 34, 8
+  CONTROL "Costo", 321, "Static", WS_GROUP, 123, 261, 23, 8
+  CONTROL "Nº lote", 113, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 19, 50, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 177, 45, 8
+  CONTROL "Portes", 351, "Static", WS_GROUP, 4, 229, 42, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 250, 216, 31, 8
+  CONTROL "", 521, "Static", WS_GROUP, 4, 177, 42, 8
+  CONTROL "", 541, "Static", WS_GROUP, 4, 203, 47, 8
+  CONTROL "", 531, "Static", WS_GROUP, 4, 190, 42, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 164, 47, 8
+  CONTROL "Comisión ", -1, "Static", WS_GROUP, 250, 151, 35, 8
   CONTROL "Caducidad", 341, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 32, 41, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 163, 35, 8
-  CONTROL "Bultos", 451, "Static", WS_GROUP, 4, 98, 48, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 189, 35, 8
-  CONTROL "Stock", -1, "Static", WS_GROUP, 250, 220, 22, 8
-  CONTROL "", 256, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 55, 68, 65, 11
-  CONTROL "Contador", 257, "Static", WS_GROUP, 4, 71, 36, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 203, 35, 8
+  CONTROL "Bultos", 451, "Static", WS_GROUP, 4, 138, 48, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 229, 35, 8
+  CONTROL "Stock", -1, "Static", WS_GROUP, 250, 260, 22, 8
+  CONTROL "", 256, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 55, 108, 65, 11
+  CONTROL "Contador", 257, "Static", WS_GROUP, 4, 111, 36, 8
 }
 
 LSATCLI_3 DIALOG DISCARDABLE 135, 103, 359, 218
