Sat y pedidos de clientes

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12522,87 +12522,88 @@ FONT 8, "MS Sans Serif"
   CONTROL "TBitmap", 220, "TBitmap", 0x00000000, 369, 14, 59, 47
 }
 
-LFACCLI_1 DIALOG DISCARDABLE 150, 93, 359, 232
+LFACCLI_1 DIALOG DISCARDABLE 150, 93, 363, 273
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 2, 65, 11
-  CONTROL "", 111, "Edit", NOT WS_VISIBLE|ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 64
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 25
+  CONTROL "", 111, "Edit", NOT WS_VISIBLE|ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 2, 234, 64
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 123, 2, 234, 25
   CONTROL "", 112, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 16, 65, 11
   CONTROL "", 340, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 29, 65, 11
   CONTROL "", 270, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 42, 65, 11
-  CONTROL "", 272, "Edit", NOT WS_VISIBLE|WS_BORDER, 122, 42, 234, 11
+  CONTROL "", 272, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 42, 234, 11
   CONTROL "", 280, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 55, 65, 11
-  CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 122, 55, 234, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 68, 65, 11
-  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 81, 65, 11
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 95, 65, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 108, 65, 11
-  CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 121, 65, 11
-  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 134, 65, 11
-  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 147, 65, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 160, 65, 11
-  CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 173, 65, 11
-  CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 186, 65, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 199, 65, 11
-  CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 218, 65, 11
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 68, 70, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 81, 70, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 301, 81, 54, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 95, 70, 11
-  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 301, 95, 54, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 108, 70, 11
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 249, 108, 108, 11
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 178, 121, 70, 11
-  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 249, 121, 108, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 178, 134, 70, 11
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 249, 134, 108, 11
-  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 147, 70, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 160, 51, 11
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 230, 160, 18, 11
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 160, 50, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 338, 160, 19, 11
-  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 178, 173, 179, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 178, 186, 70, 11
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 178, 218, 70, 11
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 249, 186, 108, 11
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 199, 70, 11
-  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 250, 69, 63, 10
-  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 160, 23, 11
-  CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 163, 25, 8
-  CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 98, 48, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 4, 221, 34, 8
-  CONTROL "Descuento ", -1, "Static", WS_GROUP, 123, 84, 42, 8
-  CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 111, 43, 8
+  CONTROL "", 282, "Edit", NOT WS_VISIBLE|WS_BORDER, 123, 55, 234, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 108, 65, 11
+  CONTROL "", 450, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 121, 65, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 135, 65, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 148, 65, 11
+  CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 161, 65, 11
+  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 174, 65, 11
+  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 187, 65, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 200, 65, 11
+  CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 213, 65, 11
+  CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 226, 65, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 239, 65, 11
+  CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 258, 65, 11
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 108, 70, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 121, 70, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 303, 121, 54, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 178, 135, 70, 11
+  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 303, 135, 54, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 178, 148, 70, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 249, 148, 108, 11
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 178, 161, 70, 11
+  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 249, 161, 108, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 178, 174, 70, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 249, 174, 108, 11
+  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 187, 70, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 200, 51, 11
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 230, 200, 18, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 287, 200, 50, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 338, 200, 19, 11
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 178, 213, 179, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 178, 226, 70, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 178, 258, 70, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 249, 226, 108, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 178, 239, 70, 11
+  CONTROL "Gastos suplidos", 440, "Button", NOT WS_VISIBLE|BS_AUTOCHECKBOX|WS_TABSTOP, 250, 109, 63, 10
+  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 200, 23, 11
+  CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 203, 25, 8
+  CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 138, 48, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 4, 261, 34, 8
+  CONTROL "Descuento ", -1, "Static", WS_GROUP, 123, 124, 42, 8
+  CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 151, 43, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 5, 36, 8
-  CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 71, 36, 8
-  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 250, 83, 49, 8
-  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 98, 47, 8
-  CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 189, 47, 8
+  CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 111, 36, 8
+  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 250, 123, 49, 8
+  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 138, 47, 8
+  CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 229, 47, 8
   CONTROL "Propiedad 2", 281, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 57, 51, 8
   CONTROL "Propiedad 1", 271, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 44, 51, 8
-  CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 202, 37, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 163, 19, 8
-  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 137, 37, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 123, 189, 45, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 214, 354, 11
-  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 123, 71, 34, 8
-  CONTROL "Costo", 321, "Static", WS_GROUP, 123, 221, 23, 8
+  CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 242, 37, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 203, 19, 8
+  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 177, 37, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 123, 229, 45, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 3, 254, 354, 1
+  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 123, 111, 34, 8
+  CONTROL "Costo", 321, "Static", WS_GROUP, 123, 261, 23, 8
   CONTROL "Nº lote", 113, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 18, 50, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 124, 45, 8
-  CONTROL "Portes", 351, "Static", WS_GROUP, 4, 176, 42, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 250, 163, 31, 8
-  CONTROL "", 521, "Static", WS_GROUP, 4, 124, 42, 8
-  CONTROL "", 541, "Static", WS_GROUP, 4, 150, 47, 8
-  CONTROL "", 531, "Static", WS_GROUP, 4, 137, 42, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 111, 47, 8
-  CONTROL "Comisión ", -1, "Static", WS_GROUP, 250, 98, 35, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 164, 45, 8
+  CONTROL "Portes", 351, "Static", WS_GROUP, 4, 216, 42, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 250, 203, 31, 8
+  CONTROL "", 521, "Static", WS_GROUP, 4, 164, 42, 8
+  CONTROL "", 541, "Static", WS_GROUP, 4, 190, 47, 8
+  CONTROL "", 531, "Static", WS_GROUP, 4, 177, 42, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 151, 47, 8
+  CONTROL "Comisión ", -1, "Static", WS_GROUP, 250, 138, 35, 8
   CONTROL "Caducidad", 341, "Static", NOT WS_VISIBLE|WS_GROUP, 4, 32, 41, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 150, 35, 8
-  CONTROL "Bultos", 451, "Static", WS_GROUP, 4, 84, 48, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 176, 35, 8
-  CONTROL "Stock", -1, "Static", WS_GROUP, 124, 202, 45, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 190, 35, 8
+  CONTROL "Bultos", 451, "Static", WS_GROUP, 4, 124, 48, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 216, 35, 8
+  CONTROL "Stock", -1, "Static", WS_GROUP, 124, 242, 45, 8
+  CONTROL "", 500, "TXBrowse", NOT WS_VISIBLE|WS_TABSTOP|0x00300000, 4, 16, 353, 90
 }
 
 LFACCLI_2 DIALOG DISCARDABLE 150, 93, 359, 220
@@ -19994,7 +19995,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Ubicación", -1, "Static", WS_GROUP, 5, 68, 73, 8
 }
 
-LSATCLI_1 DIALOG DISCARDABLE 150, 93, 717, 271
+LSATCLI_1 DIALOG DISCARDABLE 150, 93, 361, 271
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
