--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -375,7 +375,7 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 246, 30, 113, 11
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 246, 42, 199, 11
-  CONTROL "", 172, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 391, 28, 54, 183
+  CONTROL "", 172, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 385, 28, 47, 183
   CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 54, 113, 11
   CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 246, 66, 199, 11
   CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 246, 78, 73, 11
@@ -497,6 +497,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 151, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 94, 11
   CONTROL "", 152, "Edit", NOT WS_VISIBLE|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 103, 103, 94, 11
   CONTROL "&S", 513, "Button", WS_TABSTOP, 91, 102, 12, 11
+  CONTROL "", 174, "TBtnBmp", 0x00000000, 433, 28, 12, 13
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
