--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -127,3 +127,4 @@ user_mobilephone_48 BITMAP "..\\bmp\\user_mobilephone_48.bmp"
 form_blue_48 BITMAP "..\\bmp\\form_blue_48.bmp"
 user_48 BITMAP "..\\bmp\\user_48.bmp"
 shopping_bag_48 BITMAP "..\\bmp\\shopping_bag_48.bmp"
+arrow_down_blue_16 BITMAP "..\\bmp\\arrow_down_blue_16.bmp"
