--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -12530,7 +12530,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 2, 65, 11
   CONTROL "", 111, "Edit", NOT WS_VISIBLE|ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 2, 234, 64
   CONTROL "", 500, "TXBrowse", NOT WS_VISIBLE|WS_TABSTOP|0x00300000, 4, 16, 353, 90
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 123, 2, 234, 25
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 123, 2, 234, 11
   CONTROL "", 112, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 55, 16, 65, 11
   CONTROL "", 340, "Edit", NOT WS_VISIBLE|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 29, 65, 11
   CONTROL "", 270, "Edit", NOT WS_VISIBLE|WS_BORDER|WS_TABSTOP, 55, 42, 65, 11
@@ -13599,86 +13599,87 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nº lote", 211, "Static", WS_GROUP, 8, 26, 25, 8
 }
 
-LPEDCLI_1 DIALOG DISCARDABLE 150, 93, 359, 233
+LPEDCLI_1 DIALOG DISCARDABLE 150, 93, 359, 273
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 56, 2, 65, 11
-  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 25
-  CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 122, 2, 234, 54
-  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 56, 15, 65, 11
+  CONTROL "", 500, "TXBrowse", NOT WS_VISIBLE|WS_TABSTOP|0x00300000, 4, 16, 353, 90
+  CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 123, 2, 234, 25
+  CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 123, 2, 234, 54
+  CONTROL "", 112, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 56, 16, 65, 11
   CONTROL "", 340, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 27, 65, 11
   CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 56, 40, 65, 11
   CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 56, 52, 65, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 56, 69, 40, 11
-  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 82, 65, 11
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 95, 65, 11
-  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 108, 65, 11
-  CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 121, 65, 11
-  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 134, 65, 11
-  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 147, 65, 11
-  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 31, 160, 23, 11
-  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 160, 65, 11
-  CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 173, 65, 11
-  CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 186, 65, 11
-  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 199, 65, 11
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 175, 69, 56, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 175, 82, 56, 11
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 300, 82, 56, 11
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 175, 95, 56, 11
-  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 95, 56, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 175, 108, 30, 11
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 206, 108, 150, 11
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 175, 121, 30, 11
-  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 206, 121, 150, 11
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 175, 134, 30, 11
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 206, 134, 150, 11
-  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 175, 147, 69, 11
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 175, 160, 48, 11
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 224, 160, 19, 11
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 286, 160, 50, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 338, 160, 19, 11
-  CONTROL "", 620, "Edit", WS_BORDER|WS_TABSTOP, 175, 173, 182, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 175, 186, 70, 11
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 246, 186, 111, 11
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 175, 199, 70, 11
-  CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 56, 218, 65, 11
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 175, 218, 71, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 56, 108, 40, 11
+  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 121, 65, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 134, 65, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 147, 65, 11
+  CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 160, 65, 11
+  CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 173, 65, 11
+  CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 186, 65, 11
+  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 31, 199, 23, 11
+  CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 199, 65, 11
+  CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 212, 65, 11
+  CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 225, 65, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 56, 238, 65, 11
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 175, 108, 56, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 175, 121, 56, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 300, 121, 56, 11
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 175, 134, 56, 11
+  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 134, 56, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 175, 147, 30, 11
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 206, 147, 150, 11
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 175, 160, 30, 11
+  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 206, 160, 150, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 175, 173, 30, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 206, 173, 150, 11
+  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 175, 186, 69, 11
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 175, 199, 48, 11
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 224, 199, 19, 11
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 286, 199, 50, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 338, 199, 19, 11
+  CONTROL "", 620, "Edit", WS_BORDER|WS_TABSTOP, 175, 212, 182, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 175, 225, 70, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 246, 225, 111, 11
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 175, 238, 70, 11
+  CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 56, 257, 65, 11
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 175, 257, 71, 11
   CONTROL "", 272, "Edit", WS_BORDER, 122, 40, 234, 11
   CONTROL "", 282, "Edit", WS_BORDER, 122, 52, 234, 11
-  CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 163, 25, 8
-  CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 98, 48, 8
-  CONTROL "Importe", -1, "Static", WS_GROUP, 4, 221, 34, 8
-  CONTROL "Descuento ", -1, "Static", WS_GROUP, 123, 86, 42, 8
-  CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 111, 43, 8
+  CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 202, 25, 8
+  CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 137, 48, 8
+  CONTROL "Importe", -1, "Static", WS_GROUP, 4, 260, 34, 8
+  CONTROL "Descuento ", -1, "Static", WS_GROUP, 123, 125, 42, 8
+  CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 150, 43, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 5, 36, 8
-  CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 72, 36, 8
-  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 245, 86, 51, 8
-  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 98, 47, 8
-  CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 189, 47, 8
+  CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 111, 36, 8
+  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 245, 125, 51, 8
+  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 123, 137, 47, 8
+  CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 228, 47, 8
   CONTROL "Propiedad 2", 281, "Static", WS_GROUP, 4, 54, 51, 8
   CONTROL "Propiedad 1", 271, "Static", WS_GROUP, 4, 42, 51, 8
-  CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 202, 37, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 124, 163, 19, 8
-  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 137, 37, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 123, 189, 45, 8
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 1, 214, 354, 1
-  CONTROL "Imp. especiales", 126, "Static", WS_GROUP, 123, 72, 52, 8
-  CONTROL "Costo", 321, "Static", WS_GROUP, 123, 221, 23, 8
+  CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 241, 37, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 124, 202, 19, 8
+  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 123, 176, 37, 8
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 123, 228, 45, 8
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 1, 253, 354, 1
+  CONTROL "Imp. especiales", 126, "Static", WS_GROUP, 123, 111, 52, 8
+  CONTROL "Costo", 321, "Static", WS_GROUP, 123, 260, 23, 8
   CONTROL "Nº lote", 113, "Static", WS_GROUP, 4, 18, 50, 8
-  CONTROL "Portes", 351, "Static", WS_GROUP, 4, 176, 42, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 245, 163, 31, 8
-  CONTROL "", 521, "Static", WS_GROUP, 4, 124, 42, 8
-  CONTROL "", 541, "Static", WS_GROUP, 4, 150, 47, 8
-  CONTROL "", 531, "Static", WS_GROUP, 4, 137, 42, 8
-  CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 111, 47, 8
-  CONTROL "Comisión", -1, "Static", WS_GROUP, 245, 98, 33, 8
+  CONTROL "Portes", 351, "Static", WS_GROUP, 4, 215, 42, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 245, 202, 31, 8
+  CONTROL "", 521, "Static", WS_GROUP, 4, 163, 42, 8
+  CONTROL "", 541, "Static", WS_GROUP, 4, 189, 47, 8
+  CONTROL "", 531, "Static", WS_GROUP, 4, 176, 42, 8
+  CONTROL "Und. medición", -1, "Static", WS_GROUP, 123, 150, 47, 8
+  CONTROL "Comisión", -1, "Static", WS_GROUP, 245, 137, 33, 8
   CONTROL "Caducidad", 341, "Static", WS_GROUP, 4, 29, 41, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 124, 150, 35, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 124, 176, 35, 8
-  CONTROL "Bultos", 611, "Static", WS_GROUP, 4, 86, 48, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 124, 46, 8
-  CONTROL "Stock", -1, "Static", WS_GROUP, 123, 202, 45, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 124, 189, 35, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 124, 215, 35, 8
+  CONTROL "Bultos", 611, "Static", WS_GROUP, 4, 125, 48, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 123, 163, 46, 8
+  CONTROL "Stock", -1, "Static", WS_GROUP, 123, 241, 45, 8
 }
 
 LPEDCLI_2 DIALOG DISCARDABLE 42, 28, 745, 228
