precios por propiedades

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -13686,27 +13686,29 @@ LPEDCLI_2 DIALOG DISCARDABLE 42, 28, 745, 228
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 2, 30, 12
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 2, 30, 11
   CONTROL "No imprimir línea ", 110, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 3, 67, 10
   CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 27, 60, 12
   CONTROL "", 121, "Edit", ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 161, 27, 60, 12
   CONTROL "Línea de control", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 15, 65, 10
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 100, 40, 60, 12
-  CONTROL "", 151, "Edit", WS_BORDER, 161, 40, 194, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 100, 52, 60, 12
-  CONTROL "", 161, "Edit", WS_BORDER, 161, 52, 194, 12
-  CONTROL "", 360, "Edit", WS_BORDER|WS_TABSTOP, 100, 64, 60, 12
-  CONTROL "", 361, "Edit", WS_BORDER, 161, 64, 194, 12
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 100, 76, 90, 12
-  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 88, 90, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 100, 100, 255, 12
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 100, 40, 60, 11
+  CONTROL "", 151, "Edit", WS_BORDER, 161, 40, 194, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 100, 52, 60, 11
+  CONTROL "", 161, "Edit", WS_BORDER, 161, 52, 194, 11
+  CONTROL "", 360, "Edit", WS_BORDER|WS_TABSTOP, 100, 64, 60, 11
+  CONTROL "", 361, "Edit", WS_BORDER, 161, 64, 194, 11
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 100, 76, 90, 11
+  CONTROL "", 300, "Edit", ES_RIGHT|WS_BORDER, 100, 88, 90, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 100, 100, 255, 11
   CONTROL "Precio venta recomendado", 903, "Static", WS_GROUP, 5, 79, 91, 8
-  CONTROL "", 380, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 100, 112, 111, 51
+  CONTROL "", 380, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 100, 112, 111, 11
   CONTROL "Línea de escandallo", 330, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 131, 78, 10
   CONTROL "Precio en escandallo", 340, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 5, 144, 79, 10
   CONTROL "Control de stocks", 350, "Button", BS_AUTORADIOBUTTON, 5, 158, 68, 10
   CONTROL "Contadores", 351, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 171, 49, 10
   CONTROL "No controlar stock", 352, "Button", BS_AUTORADIOBUTTON|WS_GROUP, 5, 184, 71, 10
+  CONTROL "", 200, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 196, 80, 11
+  CONTROL "", 210, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 208, 80, 11
   CONTROL "Plazo de entrega", -1, "Static", WS_GROUP, 5, 30, 61, 8
   CONTROL "Imagen", -1, "Static", WS_GROUP, 5, 102, 73, 8
   CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 5, 43, 55, 8
@@ -13714,6 +13716,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Margen", 301, "Static", WS_GROUP, 5, 91, 24, 8
   CONTROL "Proveedor", -1, "Static", WS_GROUP, 5, 67, 38, 8
   CONTROL "Estado en producción", -1, "Static", WS_GROUP, 5, 115, 77, 8
+  CONTROL "Incio servicio", -1, "Static", WS_GROUP, 5, 199, 51, 8
+  CONTROL "Fin servicio", -1, "Static", WS_GROUP, 5, 211, 51, 8
 }
 
 LPEDCLI_3 DIALOG DISCARDABLE 135, 103, 359, 177
@@ -15381,23 +15385,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 407, "Static", SS_RIGHT|WS_GROUP, 582, 345, 80, 8
   CONTROL "", 480, "Static", WS_GROUP, 485, 355, 35, 15
   CONTROL "0", 470, "Static", SS_RIGHT|WS_GROUP, 534, 355, 128, 15
-  CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 42, 24, 11
-  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 126, 42, 34, 11
-  CONTROL "", 105, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 162, 42, 18, 11
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 54, 80, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 100, 90, 80, 11
-  CONTROL "", 125, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 103, 80, 11
-  CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 100, 115, 80, 186
-  CONTROL "", 217, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 100, 28, 80, 186
-  CONTROL "Imp. inc.", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 116, 51, 10
+  CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 30, 24, 11
+  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 125, 30, 36, 11
+  CONTROL "", 105, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 162, 30, 18, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 42, 80, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 100, 78, 80, 11
+  CONTROL "", 125, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 90, 80, 11
+  CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 100, 114, 80, 186
+  CONTROL "Impuestos incluidos", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 45, 103, 75, 10
   CONTROL "Neto", 708, "Static", WS_GROUP, 485, 300, 18, 8
   CONTROL "Margen", 709, "Static", WS_GROUP, 50, 355, 29, 8
   CONTROL "I.V.M.H.", 710, "Static", WS_GROUP, 485, 318, 25, 8
   CONTROL "Impuestos", 711, "Static", WS_GROUP, 485, 336, 37, 8
   CONTROL "", 490, "TXBrowse", 0x00200000, 202, 287, 278, 78
-  CONTROL "Número", -1, "Static", WS_GROUP, 44, 45, 51, 8
-  CONTROL "Estado", 121, "Static", WS_GROUP, 44, 93, 51, 8
-  CONTROL "Presupuesto", 124, "Static", WS_GROUP, 44, 105, 51, 8
+  CONTROL "Número", -1, "Static", WS_GROUP, 44, 33, 51, 8
+  CONTROL "Estado", 121, "Static", WS_GROUP, 44, 81, 51, 8
+  CONTROL "Presupuesto", 124, "Static", WS_GROUP, 44, 93, 51, 8
   CONTROL "Divisa", -1, "Static", WS_GROUP, 444, 117, 28, 8
   CONTROL "Cliente", -1, "Static", WS_GROUP, 183, 33, 46, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 183, 45, 46, 8
@@ -15424,15 +15427,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 582, 309, 80, 8
   CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 582, 327, 80, 8
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 91, 353, 101, 11
-  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 66, 80, 11
-  CONTROL "Fecha salida", 112, "Static", WS_GROUP, 44, 69, 51, 8
-  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 78, 80, 11
-  CONTROL "Fecha entrada", 114, "Static", WS_GROUP, 44, 81, 51, 8
-  CONTROL "", 117, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 100, 90, 80, 11
-  CONTROL "Dias", 118, "Static", WS_GROUP, 44, 93, 51, 8
+  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 54, 80, 11
+  CONTROL "Incio servicio", 112, "Static", WS_GROUP, 44, 57, 51, 8
+  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 66, 80, 11
+  CONTROL "Fin servicio", 114, "Static", WS_GROUP, 44, 69, 51, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Pedidos de clientes", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 57, 51, 8
+  CONTROL "Fecha", -1, "Static", WS_GROUP, 44, 45, 51, 8
   CONTROL "Banco", -1, "Static", WS_GROUP, 444, 57, 26, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 444, 69, 28, 8
   CONTROL "", 424, "Edit", WS_BORDER|WS_TABSTOP, 474, 66, 18, 11
