--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -128,3 +128,4 @@ form_blue_48 BITMAP "..\\bmp\\form_blue_48.bmp"
 user_48 BITMAP "..\\bmp\\user_48.bmp"
 shopping_bag_48 BITMAP "..\\bmp\\shopping_bag_48.bmp"
 arrow_down_blue_16 BITMAP "..\\bmp\\arrow_down_blue_16.bmp"
+graphics-tablet_16 BITMAP "..\\bmp\\graphics-tablet_16.bmp"
