--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20665,15 +20665,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Descripción", -1, "Static", WS_GROUP, 4, 12, 39, 8
 }
 
-DLG_SIGNATURE DIALOG DISCARDABLE -32768, 65, 358, 189
-STYLE WS_POPUP|DS_MODALFRAME|DS_SYSMODAL|DS_3DLOOK|WS_CAPTION|WS_VISIBLE
+DLG_SIGNATURE DIALOG DISCARDABLE -32768, 65, 359, 189
+STYLE WS_POPUP|DS_MODALFRAME|DS_SYSMODAL|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Firma"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "&Aceptar", 100, "Button", WS_TABSTOP, 246, 172, 50, 14
   CONTROL "&Cancelar", 101, "Button", WS_TABSTOP, 305, 172, 50, 14
   CONTROL "&Limpiar", 102, "Button", WS_TABSTOP, 4, 172, 35, 14
-  CONTROL "", 200, "Static", SS_WHITERECT, 4, 2, 350, 166
-  CONTROL "X", -1, "Static", NOT WS_VISIBLE|SS_RIGHT|WS_GROUP, 1, 158, 5, 9
+  CONTROL "", 200, "Static", SS_BLACKFRAME, 4, 2, 350, 166
 }
 
