--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20479,7 +20479,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 405, 79, 120, 12
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 526, 79, 122, 12
   CONTROL "Buscar [F5]", 200, "Button", WS_TABSTOP, 488, 333, 50, 13
-  CONTROL "Limpiar", 210, "Button", WS_TABSTOP, 543, 333, 50, 13
+  CONTROL "Limpiar [F4]", 210, "Button", WS_TABSTOP, 543, 333, 50, 13
   CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 50, 110, 598, 214
   CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 598, 333, 50, 13
   CONTROL "Código", -1, "Static", WS_GROUP, 49, 69, 37, 8
@@ -20558,7 +20558,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 631, 50, 100, 12
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 733, 50, 100, 12
   CONTROL "Buscar [F5]", 200, "Button", WS_TABSTOP, 674, 360, 50, 13
-  CONTROL "Limpiar", 210, "Button", WS_TABSTOP, 729, 360, 50, 13
+  CONTROL "Limpiar [F4]", 210, "Button", WS_TABSTOP, 729, 360, 50, 13
   CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 50, 82, 783, 271
   CONTROL "&Salir", IDCANCEL, "Button", WS_TABSTOP, 784, 360, 50, 13
   CONTROL "Código", -1, "Static", WS_GROUP, 325, 40, 37, 8
