--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20446,22 +20446,31 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nombre", -1, "Static", WS_GROUP, 9, 32, 27, 8
 }
 
-CENTROCOSTE DIALOG DISCARDABLE 60, 16, 297, 90
+CENTROCOSTE DIALOG DISCARDABLE 60, 16, 411, 176
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Centro de coste"
 FONT 8, "Helv"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 80, 13, 33, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 80, 26, 210, 11
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 80, 47, 80, 11
-  CONTROL "", 130, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 80, 60, 80, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 188, 72, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 243, 72, 50, 14
-  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 2, 3, 294, 40
-  CONTROL "Código", -1, "Static", WS_GROUP, 10, 17, 60, 8
-  CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 29, 60, 8
-  CONTROL "Objetivo de venta", 4001, "Static", WS_GROUP, 10, 51, 60, 8
-  CONTROL "Objetivo de compra", 4002, "Static", WS_GROUP, 10, 62, 67, 8
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 122, 39, 60, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 122, 52, 276, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 122, 80, 60, 11
+  CONTROL "", 130, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 122, 93, 60, 12
+  CONTROL "", 140, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 122, 121, 100, 52
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 122, 137, 100, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 223, 137, 175, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 298, 158, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 353, 158, 50, 14
+  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 44, 29, 360, 40
+  CONTROL "Código", -1, "Static", WS_GROUP, 52, 43, 60, 8
+  CONTROL "Descripción ", -1, "Static", WS_GROUP, 52, 55, 60, 8
+  CONTROL "Objetivo de venta", -1, "Static", WS_GROUP, 52, 83, 60, 8
+  CONTROL "Objetivo de compra", -1, "Static", WS_GROUP, 52, 97, 67, 8
+  CONTROL "Objetivos", -1, "Button", BS_GROUPBOX, 44, 70, 360, 40
+  CONTROL "Asociación", -1, "Button", BS_GROUPBOX, 44, 112, 360, 42
+  CONTROL "Documento", -1, "Static", WS_GROUP, 52, 125, 60, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 52, 139, 47, 8
+  CONTROL "", 800, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
+  CONTROL "Centro de coste", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 359, 8
 }
 
 BUSCAR_AVANZADA1024 DIALOG DISCARDABLE 37, 77, 656, 350
