--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4718,17 +4718,17 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Contabilizar empresa"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 52, 60, 12
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 64, 60, 12
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 52, 60, 11
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 64, 60, 11
   CONTROL "Todas las sesiones", 90, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 228, 40, 73, 10
-  CONTROL "", 100, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 278, 52, 60, 12
-  CONTROL "", 101, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 339, 52, 20, 12
-  CONTROL "", 110, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 278, 64, 60, 12
-  CONTROL "", 111, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 339, 64, 20, 12
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 93, 60, 12
-  CONTROL "", 141, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 161, 93, 236, 12
-  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 105, 60, 12
-  CONTROL "", 151, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 161, 105, 236, 12
+  CONTROL "", 100, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 278, 52, 60, 11
+  CONTROL "", 101, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 339, 52, 20, 11
+  CONTROL "", 110, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 278, 64, 60, 11
+  CONTROL "", 111, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 339, 64, 20, 11
+  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 93, 60, 11
+  CONTROL "", 141, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 161, 93, 236, 11
+  CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 105, 60, 11
+  CONTROL "", 151, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 161, 105, 236, 11
   CONTROL "Contabilizar facturas de proveedores", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 134, 128, 10
   CONTROL "Contabilizar facturas rectificativas de proveedores", 171, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 146, 169, 10
   CONTROL "Contabilizar pagos a proveedores", 172, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 158, 124, 10
@@ -4739,12 +4739,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "Contabilizar tickets de clientes", 176, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 228, 182, 108, 10
   CONTROL "Contabilizar cobros de clientes", 177, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 228, 194, 115, 10
   CONTROL "Simular resultados", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 227, 70, 10
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 387, 223, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 441, 223, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 388, 223, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 442, 223, 50, 14
   CONTROL "Desde", -1, "Static", WS_GROUP, 228, 55, 26, 8
   CONTROL "Hasta", -1, "Static", WS_GROUP, 228, 67, 24, 8
   CONTROL "Sesiones", -1, "Button", BS_GROUPBOX, 222, 28, 178, 50
-  CONTROL "msctls_progress32", 200, "msctls_progress32", 0x00000000, 44, 213, 446, 8
+  CONTROL "", 200, "msctls_progress32", 0x00000000, 44, 213, 448, 4
   CONTROL "", 400, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER|WS_TABSTOP, 44, 241, 448, 149
   CONTROL "Contabilizar ventas", -1, "Button", BS_GROUPBOX, 222, 123, 178, 88
   CONTROL "Enlace contaplus", -1, "Button", BS_GROUPBOX, 44, 82, 356, 38
@@ -4785,7 +4785,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Series", -1, "Button", BS_GROUPBOX, 402, 29, 89, 182
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Centro de contabilización", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-  CONTROL "msctls_progress32", 210, "msctls_progress32", 0x00000000, 44, 217, 446, 8
+  CONTROL "", 210, "msctls_progress32", 0x00000000, 44, 217, 448, 4
 }
 
 CONTACTOS DIALOG DISCARDABLE 51, -26, 289, 218
