--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -130,3 +130,5 @@ user_48 BITMAP "..\\bmp\\user_48.bmp"
 shopping_bag_48 BITMAP "..\\bmp\\shopping_bag_48.bmp"
 arrow_down_blue_16 BITMAP "..\\bmp\\arrow_down_blue_16.bmp"
 graphics-tablet_16 BITMAP "..\\bmp\\graphics-tablet_16.bmp"
+user1_64 BITMAP "..\\bmp\\user1_64.bmp"
+document_plain_user1_64 BITMAP "..\\bmp\\document_plain_user1_64.bmp"
