--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4991,16 +4991,15 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-DELETERECNOTCT DIALOG DISCARDABLE 113, 81, 287, 112
+DELETERECNOTCT DIALOG DISCARDABLE 113, 81, 287, 81
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Confirme supresión."
-FONT 8, "MS Sans Serif"
+FONT 15, "Segoe UI Light"
 {
-  CONTROL "Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 178, 59, 50, 50
-  CONTROL "&Cancelar", IDCANCEL, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 233, 59, 50, 50
-  CONTROL "¿ Desea eliminar el registro en curso\?", 100, "Static", WS_GROUP, 59, 14, 224, 32
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 53, 288, 1
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 98, 53, 42, 23
+  CONTROL "&Cancelar", IDCANCEL, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 145, 53, 43, 23
+  CONTROL "¿ Desea eliminar el registro en curso\?", 100, "Static", SS_CENTER|WS_GROUP, 2, 2, 283, 46
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 50, 290, 1
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
