--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6845,20 +6845,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER, 242, 102, 90, 11
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 482, 30, 70, 11
   CONTROL "", 151, "Edit", WS_BORDER, 554, 30, 108, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 482, 42, 70, 11
-  CONTROL "", 161, "Edit", WS_BORDER, 554, 42, 108, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 482, 54, 180, 11
-  CONTROL "", 305, "Edit", WS_BORDER|WS_TABSTOP, 482, 66, 18, 11
-  CONTROL "", 306, "Edit", WS_BORDER|WS_TABSTOP, 500, 66, 19, 11
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 519, 66, 28, 11
-  CONTROL "", 302, "Edit", WS_BORDER|WS_TABSTOP, 548, 66, 28, 11
-  CONTROL "", 303, "Edit", WS_BORDER|WS_TABSTOP, 576, 66, 18, 11
-  CONTROL "", 304, "Edit", WS_BORDER|WS_TABSTOP, 594, 66, 68, 11
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 482, 78, 70, 11
-  CONTROL "", 166, "Edit", WS_BORDER, 554, 78, 108, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 482, 90, 70, 11
-  CONTROL "", 171, "TBitmap", 0x00800000, 554, 90, 19, 11
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 575, 90, 87, 11
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 482, 42, 70, 11
+  CONTROL "", 341, "Edit", WS_BORDER, 554, 42, 108, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 482, 54, 70, 11
+  CONTROL "", 161, "Edit", WS_BORDER, 554, 54, 108, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 482, 66, 180, 11
+  CONTROL "", 305, "Edit", WS_BORDER|WS_TABSTOP, 482, 78, 18, 11
+  CONTROL "", 306, "Edit", WS_BORDER|WS_TABSTOP, 500, 78, 19, 11
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 519, 78, 28, 11
+  CONTROL "", 302, "Edit", WS_BORDER|WS_TABSTOP, 548, 78, 28, 11
+  CONTROL "", 303, "Edit", WS_BORDER|WS_TABSTOP, 576, 78, 18, 11
+  CONTROL "", 304, "Edit", WS_BORDER|WS_TABSTOP, 594, 78, 68, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 482, 90, 70, 11
+  CONTROL "", 166, "Edit", WS_BORDER, 554, 90, 108, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 482, 102, 70, 11
+  CONTROL "", 171, "TBitMap", 0x00800000, 554, 102, 19, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 575, 102, 87, 11
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 84, 102, 101, 11
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 115, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 115, 50, 14
@@ -6902,9 +6904,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "Provincia", -1, "Static", WS_GROUP, 192, 93, 35, 8
   CONTROL "Teléfono", -1, "Static", WS_GROUP, 192, 105, 33, 8
   CONTROL "Almacén", -1, "Static", WS_GROUP, 450, 33, 31, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 450, 45, 31, 8
-  CONTROL "Caja", -1, "Static", WS_GROUP, 450, 81, 31, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 450, 93, 31, 8
+  CONTROL "Pago", -1, "Static", WS_GROUP, 450, 57, 31, 8
+  CONTROL "Caja", -1, "Static", WS_GROUP, 450, 93, 31, 8
+  CONTROL "Divisa", -1, "Static", WS_GROUP, 450, 105, 31, 8
   CONTROL "%", 701, "Static", WS_GROUP, 179, 308, 8, 8
   CONTROL "%", 702, "Static", WS_GROUP, 179, 320, 8, 8
   CONTROL "%", 703, "Static", WS_GROUP, 179, 332, 8, 8
@@ -6944,12 +6946,13 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 624, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 369, 320, 60, 11
   CONTROL "% R.E. 3", 716, "Static", WS_GROUP, 285, 323, 33, 8
   CONTROL "NFC", -1, "Static", WS_GROUP, 44, 45, 35, 8
-  CONTROL "Banco", -1, "Static", WS_GROUP, 450, 57, 31, 8
-  CONTROL "IBAN", -1, "Static", WS_GROUP, 450, 69, 31, 8
+  CONTROL "Banco", -1, "Static", WS_GROUP, 450, 69, 31, 8
+  CONTROL "IBAN", -1, "Static", WS_GROUP, 450, 81, 31, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Facturas a proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
   CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 557, 305, 100, 8
   CONTROL "Imp. especiales", -1, "Static", WS_GROUP, 501, 306, 54, 8
+  CONTROL "Origen", 342, "Static", WS_GROUP, 449, 45, 31, 8
 }
 
 FACPRV_2 DIALOG DISCARDABLE 29, 33, 670, 375
@@ -12018,7 +12021,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 102, 49, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
-  CONTROL "Alm. destino", -1, "Static", WS_GROUP, 132, 193, 43, 8
+  CONTROL "Alm. Destino", -1, "Static", WS_GROUP, 132, 193, 43, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 216, 397, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 132, 128, 34, 8
@@ -12030,7 +12033,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Caducidad", 114, "Static", WS_GROUP, 3, 29, 41, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 132, 154, 47, 8
   CONTROL "Punto verde", 172, "Static", WS_GROUP, 3, 206, 47, 8
-  CONTROL "Alm. origen", 332, "Static", WS_GROUP, 132, 180, 40, 8
+  CONTROL "Alm. Origen", 332, "Static", WS_GROUP, 132, 180, 40, 8
   CONTROL "Bultos", 451, "Static", WS_GROUP, 3, 114, 59, 8
   CONTROL "Formato", -1, "Static", WS_GROUP, 132, 167, 31, 8
   CONTROL "Imp. especial", 126, "Static", WS_GROUP, 132, 102, 47, 8
@@ -13188,10 +13191,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 152, "Edit", WS_BORDER|WS_TABSTOP, 184, 146, 46, 11
   CONTROL "", 153, "Edit", WS_BORDER, 232, 146, 163, 11
   CONTROL "", 480, "Edit", WS_BORDER|WS_TABSTOP, 184, 159, 211, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 184, 172, 46, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 232, 172, 163, 11
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 184, 185, 46, 11
-  CONTROL "", 411, "Edit", WS_BORDER, 232, 185, 163, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 184, 185, 46, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 232, 185, 163, 11
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 184, 198, 46, 11
+  CONTROL "", 411, "Edit", WS_BORDER, 232, 198, 163, 11
   CONTROL "Gastos suplidos", 460, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 329, 98, 63, 10
   CONTROL "", 210, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 64, 215, 65, 11
   CONTROL "", 400, "Edit", WS_BORDER|WS_TABSTOP, 309, 214, 86, 11
@@ -13204,7 +13207,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Tipo de imp.", -1, "Static", WS_GROUP, 3, 99, 49, 8
   CONTROL "Propiedad 2", 231, "Static", WS_GROUP, 3, 55, 43, 8
   CONTROL "Propiedad 1", 221, "Static", WS_GROUP, 3, 42, 43, 8
-  CONTROL "Almacen", -1, "Static", WS_GROUP, 132, 175, 41, 8
+  CONTROL "Alm. Destino", -1, "Static", WS_GROUP, 132, 188, 41, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 211, 397, 1
   CONTROL "Nº lote", 111, "Static", WS_GROUP, 3, 18, 27, 8
   CONTROL "Dto. prm.", -1, "Static", WS_GROUP, 132, 124, 34, 8
@@ -13218,7 +13221,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "Bultos", 471, "Static", WS_GROUP, 3, 111, 59, 8
   CONTROL "Formato", -1, "Static", WS_GROUP, 132, 162, 41, 8
   CONTROL "Imp. especial", 126, "Static", WS_GROUP, 132, 99, 47, 8
-  CONTROL "Centro de coste", -1, "Static", WS_GROUP, 132, 188, 52, 8
+  CONTROL "Centro de coste", -1, "Static", WS_GROUP, 132, 201, 52, 8
+  CONTROL "Alm. Origen", 332, "Static", WS_GROUP, 132, 175, 41, 8
+  CONTROL "", 330, "Edit", WS_BORDER|WS_TABSTOP, 184, 172, 46, 11
+  CONTROL "", 331, "Edit", WS_BORDER, 232, 172, 163, 11
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -15556,7 +15562,7 @@ LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
 PEDPRV DIALOG DISCARDABLE -29, 15, 672, 427
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Facturas de Proveedores"
+CAPTION "Origen"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 2, 2, 669, 392
